--- a/pyScriptsDB/templates/tables.html
+++ b/pyScriptsDB/templates/tables.html
@@ -128,7 +128,7 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif; /* Set the font to Roboto for the whole body */
             background-color: #f7f7f4;
         }
     
@@ -287,6 +287,8 @@
             justify-content: center; /* Center the content horizontally */
             align-items: center;     /* Center the content vertically */
             padding: 20px;  /* Padding for table content */
+            font-family: 'Roboto', sans-serif; /* Set the font to Roboto for the whole body */
+
 
         }
         .carousel-item {
@@ -308,6 +310,8 @@
             width: 100%; /* Set table width to 100% of the content area */
             margin: 0 auto; /* Center the table horizontally */
             border-collapse: collapse; /* Remove any extra space between cells */
+            font-family: 'Roboto', sans-serif; /* Set the font to Roboto for the whole body */
+
         }
                 /* Table Header and Table Cells */
 
@@ -332,6 +336,8 @@
             background-color: #d9593a; /* Add a background color to the header */
             color: #f7f7f4; /* Text color of the header */
             font-weight: bold; /* Make header text bold */
+            font-family: 'Roboto', sans-serif; /* Set the font to Roboto for the whole body */
+
         }
     
         .carousel-caption {
