--- a/pyScriptsDB/templates/add_data.html
+++ b/pyScriptsDB/templates/add_data.html
@@ -216,7 +216,7 @@
                         </li>
                         <!-- About Link -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">
+                            <a class="nav-link" href="{{ url_for('about') }}">
                                 <i class="bi bi-info-circle"></i> About
                             </a>
                         </li>
