--- a/pyScriptsDB/templates/tables.html
+++ b/pyScriptsDB/templates/tables.html
@@ -543,7 +543,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">
+                            <a class="nav-link" href="{{ url_for('about') }}">
                                 <i class="bi bi-info-circle"></i> About
                             </a>
                         </li>
