--- a/pyScriptsDB/templates/about.html
+++ b/pyScriptsDB/templates/about.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <!-- Bootstrap CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <style>
         body {
@@ -118,68 +122,71 @@
 
         /* SOURCES Section Styling */
         .source-section {
-          background-color: #82a3a6;  /* Customize the background color */
-          padding: 50px 20px;          /* Add padding for spacing */
-          text-align: center;          /* Center content */
+          background-color: #82a3a6;  
+          padding: 50px 20px;         
+          text-align: center;        
+          margin-bottom: 70px; 
+
         }
         
         .highlights-container-wrapper {
           position: relative; 
-          overflow-x: auto;  /* Enable horizontal scrolling */
-          overflow: hidden;              /* Hide the overflow when scrolling */
+          overflow-x: auto;  
+          overflow: hidden;              
           width: 100%;     
           margin: 0 auto;
-          padding-bottom: 10px;              /* Full width for container */
+          padding-bottom: 10px;              
         }
         
         .highlights-container {
-            display: flex;                         /* Arrange cards in a row */
-            gap: 30px;                             /* Space between the cards */
-            transition: transform 0.3s ease;        /* Smooth transition */
-            scroll-behavior: smooth;               /* Smooth scroll */
+            display: flex;                        
+            gap: 30px;                             
+            transition: transform 0.3s ease;       
+            scroll-behavior: smooth;               
             width: max-content;    
-            min-width: 100%;                       /* Ensure it at least takes up 100% of the wrapper width */
+            min-width: 100%;                       
                   }
         
         .highlight-card {
-          width: 300px;                  /* Card width (fixed size) */
-          border-radius: 8px;            /* Rounded corners for the cards */
-          overflow: hidden;              /* Prevent content spilling out */
-          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-          transition: transform 0.3s ease;  /* Smooth hover effect */
-          cursor: pointer;              /* Make cards clickable */
+          width: 300px;                  
+          border-radius: 8px;            
+          overflow: hidden;              
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); 
+          transition: transform 0.3s ease; 
+          cursor: pointer;            
         }
         .highlight-card a {
             display: block;
             width: 100%;
             height: 100%;
-            text-decoration: none;  /* Remove underlines */
+            text-decoration: none;  
         }
         
         
         .highlight-card:hover {
-          transform: translateY(-5px);   /* Hover effect: lift the card */
+          transform: translateY(-5px);  
         }
         
         .highlight-image {
-          width: 100%;                   /* Image takes the full width of the card */
-          height: 100%;                /* Fixed height for images */
-          object-fit: cover;             /* Ensure images fill the container */
+          width: 100%;                   
+          height: 100%;                
+          object-fit: cover;             
         }
         
         
         .scroll-arrows {
-          margin-top: 20px;               /* Space between cards and arrows */
+          margin-top: 30px; 
+          margin-bottom: 50px;
           display: flex;
-          justify-content: center;        /* Center the arrows */
-          gap: 20px;                      /* Space between arrows */
+          justify-content: center;        
+          gap: 20px;                      
         }
         
         .scroll-arrows button {
-          background-color: #82a3a6;        /* Arrow background */
-          border: 2px solid  #98a989;   /* Light border */
-          border-radius: 50%;             /* Circular arrows */
-          width: 40px;                    /* Arrow size */
+          background-color: #82a3a6;        
+          border: 2px solid  #98a989;   
+          border-radius: 50%;            
+          width: 40px;                  
           height: 40px;
           display: flex;
           align-items: center;
@@ -190,103 +197,64 @@
         }
         
         .scroll-arrows button:hover {
-          background-color:  #f7f7f4;    /* Hover effect */
+          background-color:  #f7f7f4;    
         }
         
         @media (max-width: 768px) {
           .highlight-card {
-            width: 100%;  /* Full width on smaller screens */
+            width: 100%;  
           }
         }
 
         @media (max-width: 768px) {
             .about-card-wrapper {
-                flex-direction: column;  /* Stack the boxes vertically */
+                flex-direction: column; 
                 width: 100%;
             }
         
             .about-card-image, .about-card-text {
-                width: 100%;  /* Make both boxes full width */
-                transform: translateX(0);  /* Remove any translation */
+                width: 100%;  
+                transform: translateX(0);  
             }
         }
 
-        .navbar-toggler-icon {
-            background-image: none;
-            display: grid;
-            grid-template-columns: repeat(3, 7px); /* 3 columns, each 5px */
-            grid-template-rows: repeat(3, 7px);    /* 3 rows, each 5px */
-            gap: 1px;                               /* Small gap between squares */
-            width: 22px;                            /* Overall width of the waffle icon */
-            height: 22px;                           /* Overall height of the waffle icon */
-            justify-content: center;                /* Center grid horizontally */
-            align-items: center;                    /* Center grid vertically */
+        /* Styling for the bottom navbar */
+        .navbar {
+            background-color: #82a3a6;
+            padding: 10px 0;  
+            z-index: 1030;   
         }
-
-        /* Individual waffle squares (bars) */
-        .navbar-toggler-icon span {
-            display: block;
-            background-color: #f7f7f4; /* Waffle square color */
-            border-radius: 0px; 
-            border-color:  #f7f7f4; /* Slightly rounded corners */
+        
+        .nav-link {
+            text-align: center;
+            color: #f7f7f4; 
         }
-
-        /* Square size adjustments */
-        .navbar-toggler-icon span {
-            height: 6px; /* Height of each square */
-            width: 6px;  /* Width of each square */
+        
+        .nav-link i {
+            font-size: 1.5rem;  
         }
-
-        /* Toggle button appearance */
-        .navbar-toggler {
-            padding: 0; /* Remove default padding */
-            border: none; /* Remove border */
-            display: flex; /* Use flexbox to center the icon */
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
-            width: 30px; /* Total width of the button */
-            height: 30px; /* Total height of the button */
-            background-color: transparent; /* Transparent background */
-            position: relative; /* Allow positioning */
-            top: 0px; /* Shift button down slightly */
-            left: 0px; /* Shift button left slightly */
+        
+        .nav-link span {
+            font-size: 0.8rem; 
+            display: block;    
+            margin-top: 5px;   
         }
-
-        /* Adjust the appearance when the hamburger is clicked */
-        .navbar-toggler-icon.collapsed span:nth-child(1) {
-            transform: translate(8px, 8px) rotate(45deg); /* Move and rotate the first square */
+        
+        .nav-link:hover {
+            color: #ebb650; 
         }
-
-        .navbar-toggler-icon.collapsed span:nth-child(3) {
-            transform: translate(-8px, 8px) rotate(-45deg); /* Move and rotate the third square */
+        
+        @media (max-width: 768px) {
+            .nav-link i {
+                font-size: 1.2rem;  
+            }
+        
+            .nav-link span {
+                font-size: 0.75rem; 
+            }
         }
-
-        .navbar-toggler-icon.collapsed span:nth-child(5),
-        .navbar-toggler-icon.collapsed span:nth-child(7),
-        .navbar-toggler-icon.collapsed span:nth-child(9) {
-            opacity: 0; /* Hide the other squares when collapsed */
-        }
-
-        /* Hover effect for waffle squares */
-        .navbar-toggler-icon:hover span {
-            background-color: #f7f7f4;* Change color on hover */
-        }
-
-        /* Hover effect for the toggle button */
-        .navbar-toggler:hover {
-            background-color:  #f7f7f4; /* Button background change on hover */
-        }
-
-        /* Set the text and icon color to #f7f7f4 */
-        .navbar .navbar-brand, 
-        .navbar .nav-link, 
-        .navbar-toggler-icon,
-        .navbar .nav-item i {
-            color:  #f7f7f4 !important; /* Override text and icon color */
-            font-family: 'Roboto', sans-serif; /* Font family */
-
-        }
-
+        
+        
 
         
                 
@@ -411,68 +379,40 @@
   </section>
 </section>
 
-              <!-- Navbar -->
-              <nav class="navbar navbar-light" style="background-color:#82a3a6;padding-top: 1px; padding-bottom: 1px;">
-                <div class="container-fluid">
-                    <!-- Brand or Logo -->
-                    <a class="navbar-brand" href="#" style="padding-top: 0px; padding-bottom: 0px;">
-                    </a>
-            
-                    <!-- Toggle Button for Mobile and Desktop View (always visible) -->
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon">
-                            <!-- 9 Squares for Waffle Icon -->
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </span>
-                    </button>
-                    
-                    <!-- Navbar Links (Hidden by default, shown on toggle) -->
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
-                            <!-- Query Menu Link -->
-                            <!-- Query Menu Link -->
-                            <li class="nav-item">
-                                <a class="nav-link" a href="{{ url_for('home') }}">
-                                    <i class="bi bi-house-door"></i> Home
-                                </a>
-                            </li>
+<nav class="navbar navbar-light fixed-bottom" style="background-color: #82a3a6; padding: 0; border-radius: 0;">
+    <div class="container-fluid justify-content-around">
+      <!-- Home Icon -->
+      <a class="nav-link" href="{{ url_for('home') }}">
+        <i class="bi bi-house-door" style="font-size: 1.5rem; color: #f7f7f4;"></i>
+        <span class="d-block">Home</span>
+      </a>
+      
+      <!-- Query Menu Icon -->
+      <a class="nav-link" href="{{ url_for('features') }}">
+        <i class="bi bi-search" style="font-size: 1.5rem; color: #f7f7f4;"></i>
+        <span class="d-block">Query Menu</span>
+      </a>
+      
+      <!-- Tables Icon -->
+      <a class="nav-link" href="{{ url_for('tables') }}">
+        <i class="bi bi-table" style="font-size: 1.5rem; color: #f7f7f4;"></i>
+        <span class="d-block">Tables</span>
+      </a>
+            <!-- Add Data Icon -->
+            <a class="nav-link" href="{{ url_for('add_data') }}">
+                <i class="bi bi-file-earmark-plus" style="font-size: 1.5rem; color: #f7f7f4;"></i>
+                <span class="d-block">Add Data</span>
+              </a>
         
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('features') }}">
-                                    <i class="bi bi-search"></i> Query Menu
-                                </a>
-                            </li>
-                            <!-- Tables Link -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('tables') }}">
-                                    <i class="bi bi-table"></i> Tables
-                                </a>
-                            </li>
-                            <!-- About Link -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('about') }}">
-                                    <i class="bi bi-info-circle"></i> About
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('add_data') }}">
-                                    <i class="bi bi-file-earmark-plus"></i> Add Data
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-    
-        </section>
+      <!-- About Icon -->
+      <a class="nav-link" href="{{ url_for('about') }}">
+        <i class="bi bi-info-circle" style="font-size: 1.5rem; color: #f7f7f4;"></i>
+        <span class="d-block">About</span>
+      </a>
+      
+    </div>
+  </nav>
+          </section>
 
 
     <!-- SOURCES Section with Carousel -->
