--- a/pyScriptsDB/templates/about.html
+++ b/pyScriptsDB/templates/about.html
@@ -277,7 +277,8 @@
                 <h3>Our Inspiration</h3>
                 <p>
                     We would like to acknowledge the influence of Plein Air and Volumes in inspiring our project.
-                    All image sources are listed below, and we are grateful to all of the resources provided in this course.
+                    In particular, we are incredibly grateful to Plein Air for allowing us to use their real-word data for many of our tables.
+                    All image sources are listed below, and we are grateful to all of the resources and guidance provided in this course.
                 </p>
             </div>
         </div>
